<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CANCEL"
                android:textSize="8pt"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="bSave">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SAVE"
                android:textSize="8pt"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:background="@drawable/bg_tambah_contact"
                    android:backgroundTint="@color/colorPrimary"
                    android:gravity="center">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/camera"
                        android:textSize="15pt"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#fff"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="22dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/user"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Name"
                        android:inputType="text"
                        android:paddingLeft="9dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/telp"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edPhone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="9dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Phone"
                        android:inputType="phone"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="9dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Email"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/group"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edGroup"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="9dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Group"
                        android:inputType="text"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/address"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edAddress"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="9dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Address"
                        android:inputType="text"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Event"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:background="@drawable/border">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:onClick="Calendar_Event">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/calendar"
                        android:gravity="center"
                        android:textSize="11pt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edEvent"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="9dp"
                        android:background="@drawable/edittext_bottomline"
                        android:hint="Event"
                        android:inputType="date"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>