<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:background="@color/colorPrimary">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ECF0F1"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/card_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="9dp"
                        card_view:cardCornerRadius="4dp"
                        card_view:cardElevation="3dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_margin="10dp"
                            android:paddingLeft="13dp"
                            android:paddingRight="13dp"
                            android:paddingBottom="13dp"
                            android:background="#fff">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2"
                                    android:layout_marginLeft="3dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/user"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Name"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2"
                                    android:layout_marginLeft="3dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/telp"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvPhone"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Phone"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2"
                                    android:layout_marginLeft="3dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/email"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvEmail"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Email"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2"
                                    android:layout_marginLeft="3dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/group"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvGroup"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Group"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/address"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_marginLeft="3dp"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvAddress"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Address"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:orientation="horizontal"
                                android:background="@drawable/border">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:padding="6dp"
                                    android:layout_weight="0.2"
                                    android:layout_marginLeft="3dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/calendar"
                                        android:textSize="10pt"
                                        android:gravity="center"
                                        android:layout_gravity="center"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:padding="6dp">

                                    <TextView
                                        android:id="@+id/tvEvent"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:textSize="8pt"
                                        android:layout_gravity="center"
                                        android:text="Event"
                                        android:textColor="@color/madison"/>

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.6">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:src="@drawable/back"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:text="Contact"
                android:textSize="9pt"
                android:textColor="#fff"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/tvEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:src="@drawable/edit"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:src="@drawable/delete"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>